--- a/scss/pc/mypage/index.scss
+++ b/scss/pc/mypage/index.scss
@@ -111,7 +111,7 @@
         align-items: center;
         justify-content: center;
         padding: 0 24px;
-        background-color: #c4ecb8;
+        background-color: #ffffff;
         color: #000000;
         border: 1px solid #1a1a1a;
         cursor: pointer;
@@ -242,7 +242,7 @@
         align-items: center;
         justify-content: center;
         padding: 0 24px;
-        background-color: #c4ecb8;
+        background-color: #ffffff;
         color: #000000;
         border: 1px solid #1a1a1a;
         cursor: pointer;
@@ -445,7 +445,7 @@
           .mypage-watch-item-date {
             position: absolute;
             bottom: 0;
-            left: 20px;
+            left: -30px;
             font-size: 16px;
             font-weight: 400;
             color: #7d7d7d;
@@ -590,7 +590,7 @@
         align-items: center;
         justify-content: center;
         padding: 0 24px;
-        background-color: #c4ecb8;
+        background-color: #ffffff;
         color: #000000;
         border: 1px solid #1a1a1a;
         cursor: pointer;
